Fixed get all appointmetn statuses bug